DDF-231  Fixed issue where metacard detail view was using perfectscrollbar correctly

--- a/ui/search-ui/mapsearch/src/main/webapp/css/searchPage.css
+++ b/ui/search-ui/mapsearch/src/main/webapp/css/searchPage.css
@@ -298,6 +298,12 @@ tr.selected {
     background-color: #313131;
 }
 
+/*override bootstrap tab content class setting overflow to auto since we're using perfectscrollbar*/
+#searchPages .tab-content{
+    overflow: hidden;
+}
+
+
 .load-more-link {
     display: block;
     margin: 0 auto;
